--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <div class="wrapper">
   <div class="asd-container">
     <div class="image-wrapper">
-      <img src="/photo/fff.jpg" width="400" height="400" alt="">
+      <img src="https://stormmercy.github.io/photo/fff.jpg" width="400" height="400" alt="">
       <div class="text-container">
         <a href="https://t.me/Storm_Mercy" target="_blank" class="telegram-link">Телеграм</a>
         <div class="mirror-text">ДЛЯ ПОЛУЧЕНИЯ ПОЛНОЙ ВЕРСИИ ВИСЕЛЬНИКА(ФРАЗЫ 2+ СЛОВ) И РЕЖИМА СКРЕБЛА ПИСАТЬ В ТГ</div>
@@ -102,7 +102,7 @@
 
 <div class="asd-container">
   <div class="image-wrapper">
-    <img src="/photo/fff.jpg" class="asd" width="400" height="400" alt="">
+    <img src="https://stormmercy.github.io/photo/fff.jpg" class="asd" width="400" height="400" alt="">
     <div class="text-container">
       <a href="https://t.me/Storm_Mercy" target="_blank" class="telegram-link">Телеграм</a>
       <div class="mirror-text">ДЛЯ ПОЛУЧЕНИЯ ПОЛНОЙ ВЕРСИИ ВИСЕЛЬНИКА(ФРАЗЫ 2+ СЛОВ) И РЕЖИМА СКРЕБЛА ПИСАТЬ В ТГ</div>
