--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
     <div class="image-wrapper">
       <img src="fff.jpg" width="400" height="400" alt="">
       <div class="text-container">
-        <a href="https://t.me/Storm_Mercy" target="_blank" class="telegram-link">Телеграм</a>
-        <div class="mirror-text">ДЛЯ ПОЛУЧЕНИЯ ПОЛНОЙ ВЕРСИИ ВИСЕЛЬНИКА(ФРАЗЫ 2+ СЛОВ) И РЕЖИМА СКРЕБЛА ПИСАТЬ В ТГ</div>
+        <a href="https://discord.gg/AhVKJtRv65" target="_blank" class="discord-button">Discord</a>
+        <div class="mirror-text">ДЛЯ ПОЛУЧЕНИЯ ПОЛНОЙ ВЕРСИИ ВИСЕЛЬНИКА(ФРАЗЫ 2+ СЛОВ) И РЕЖИМА СКРЕБЛА ПИСАТЬ В ДС</div>
         
       </div>
     </div>
@@ -104,8 +104,8 @@
   <div class="image-wrapper">
     <img src="fff.jpg" class="asd" width="400" height="400" alt="">
     <div class="text-container">
-      <a href="https://t.me/Storm_Mercy" target="_blank" class="telegram-link">Телеграм</a>
-      <div class="mirror-text">ДЛЯ ПОЛУЧЕНИЯ ПОЛНОЙ ВЕРСИИ ВИСЕЛЬНИКА(ФРАЗЫ 2+ СЛОВ) И РЕЖИМА СКРЕБЛА ПИСАТЬ В ТГ</div>
+      <a href="https://discord.gg/AhVKJtRv65" target="_blank" class="discord-button">Discord</a>
+      <div class="mirror-text">ДЛЯ ПОЛУЧЕНИЯ ПОЛНОЙ ВЕРСИИ ВИСЕЛЬНИКА(ФРАЗЫ 2+ СЛОВ) И РЕЖИМА СКРЕБЛА ПИСАТЬ В ДС</div>
     
     </div>
   </div>
