--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <img src="fff.jpg" width="400" height="400" alt="">
       <div class="text-container">
         <a href="https://discord.gg/AhVKJtRv65" target="_blank" class="discord-button">Discord</a>
-        <div class="mirror-text">ДЛЯ ПОЛУЧЕНИЯ ПОЛНОЙ ВЕРСИИ ВИСЕЛЬНИКА(ФРАЗЫ 2+ СЛОВ) И РЕЖИМА СКРЕБЛА ПИСАТЬ В ДС</div>
+        <div class="mirror-text">ДЛЯ ПОЛУЧЕНИЯ ПОЛНОЙ ВЕРСИИ ВИСЕЛЬНИКА(ФРАЗЫ 2+ СЛОВ)+(ДОПОЛНИТЕЛЬНАЯ БАЗА СЛОВ) И РЕЖИМА СКРЕБЛА ПИСАТЬ В ДС</div>
         
       </div>
     </div>
@@ -105,7 +105,7 @@
     <img src="fff.jpg" class="asd" width="400" height="400" alt="">
     <div class="text-container">
       <a href="https://discord.gg/AhVKJtRv65" target="_blank" class="discord-button">Discord</a>
-      <div class="mirror-text">ДЛЯ ПОЛУЧЕНИЯ ПОЛНОЙ ВЕРСИИ ВИСЕЛЬНИКА(ФРАЗЫ 2+ СЛОВ) И РЕЖИМА СКРЕБЛА ПИСАТЬ В ДС</div>
+      <div class="mirror-text">ДЛЯ ПОЛУЧЕНИЯ ПОЛНОЙ ВЕРСИИ ВИСЕЛЬНИКА(ФРАЗЫ 2+ СЛОВ)+(ДОПОЛНИТЕЛЬНАЯ БАЗА СЛОВ) И РЕЖИМА СКРЕБЛА ПИСАТЬ В ДС</div>
     
     </div>
   </div>
